syntax = "proto3";

option csharp_namespace = "DocMaster.Agent.Grpc";

package storage;

service StorageService {
  rpc Upload(stream UploadRequest) returns (UploadResponse);
  rpc Download(DownloadRequest) returns (stream DownloadResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Exists(ExistsRequest) returns (ExistsResponse);
  rpc GetHealth(HealthRequest) returns (HealthResponse);
}

message UploadRequest {
  oneof payload {
    UploadMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message UploadMetadata {
  string object_id = 1;
  int32 chunk_index = 2;
  int32 shard_index = 3;
  bool is_replicated = 4;
}

message UploadResponse {
  bool success = 1;
  string error = 2;
  string checksum = 3;
  int64 bytes_written = 4;
}

message DownloadRequest {
  string object_id = 1;
  int32 chunk_index = 2;
  int32 shard_index = 3;
  bool is_replicated = 4;
}

message DownloadResponse {
  bytes chunk = 1;
}

message DeleteRequest {
  string object_id = 1;
}

message DeleteResponse {
  bool success = 1;
  string error = 2;
  int32 shards_deleted = 3;
}

message ExistsRequest {
  string object_id = 1;
  int32 chunk_index = 2;
  int32 shard_index = 3;
  bool is_replicated = 4;
}

message ExistsResponse {
  bool exists = 1;
}

message HealthRequest {}

message HealthResponse {
  bool healthy = 1;
  int64 total_space_bytes = 2;
  int64 free_space_bytes = 3;
  int64 used_space_bytes = 4;
  int32 object_count = 5;
}
